Adding a menu, before superclass refactor.

--- a/PlantPlaces14FS/AndroidManifest.xml
+++ b/PlantPlaces14FS/AndroidManifest.xml
@@ -23,6 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name="PlantResultsActivity"></activity>
+        <activity android:name="PlantSearchActivity"></activity>
     </application>
 
 </manifest>
