--- a/PlantPlaces14FS/AndroidManifest.xml
+++ b/PlantPlaces14FS/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
