Fragments Part 2: Refactoring a ListActivity into a FragmentActivity

--- a/PlantPlaces14FS/AndroidManifest.xml
+++ b/PlantPlaces14FS/AndroidManifest.xml
@@ -36,6 +36,7 @@
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
+        <activity android:name="PlantResultsManager"></activity>
     </application>
 
 </manifest>
