--- a/PlantPlaces14FS/AndroidManifest.xml
+++ b/PlantPlaces14FS/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:allowTaskReparenting="false">
         <activity
             android:name="com.plantplaces.plantplaces14fs.GPSAPlantActivity"
             android:label="@string/app_name" >
@@ -37,6 +37,7 @@
             </intent-filter>
         </activity>
         <activity android:name="PlantResultsManager"></activity>
+        <activity android:name="PlantDetailManager"></activity>
     </application>
 
 </manifest>
